Werewolf damage type

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -267,7 +267,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../GameBuilds/GetTheOrb/GetTheOrb.exe"
+export_path="../Workspace/GameJams/Builds/GetTheOrb/Windows/GetTheOrb.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
